--- a/tex/flutter/introduction.tex
+++ b/tex/flutter/introduction.tex
@@ -2,4 +2,18 @@
 \chapsecmark{Introduction to the Book}
 \addcontentsline{toc}{chapter}{\allcaps{introduction to the book}}
 
-A book on isogeny-based cryptography.
+The field of isogeny-based cryptography is rapidly expanding since the 2020s.
+To keep up with developments in isogeny-based cryptography, we need a strong understanding
+of the basics, and a gentle introduction to advanced topics. Unfortunately, there is no
+unified place yet, where anyone can go to learn these topics, nor is there unified notation
+or sometimes even definitions between authors and works.
+
+This open-source text book aims to fill that gap by providing introductionary materials
+to all topics in isogeny-based cryptography. We strongly focus on intuition and examples to
+grasp these materials, to ensure that we turn mathematical insight into concrete cryptographic
+applications. 
+
+We strive to describe every aspect of isogeny-based cryptography, with ample references to all
+related work that introduced or expanded on these concepts. It will be impossible to keep up
+with the current progress in isogeny-based cryptography; whenever we have not yet adequately
+described a topic, we simply list the literature to provide a starting point for the reader.
